--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "redux-form-material-ui",
-  "version": "5.0.0-beta.3",
+  "name": "@525kio/redux-form-material-ui",
+  "version": "5.0.2",
   "description": "An adapter between Redux Form and Material UI components",
   "main": "./lib/index.js",
   "jsnext:main": "./es/index.js",
