--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@525kio/redux-form-material-ui",
+  "name": "redux-form-material-ui",
   "version": "5.0.2",
   "description": "An adapter between Redux Form and Material UI components",
   "main": "./lib/index.js",
